--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,9 +2,12 @@
 
 <div>
   <%= form_with(model: @user) do |f| %>
-    <%= f.label :name %>
-    <%= f.textfield :name %>
 
+    <%= render 'shared/error_messages' %>
+
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+    
     <%= f.label :email %>
     <%= f.email_field :email %>
 
@@ -14,5 +17,6 @@
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
 
-    <%= f. %>
-    
+    <%= f.submit "Create my account" %>
+  <% end %>
+</div>
