Allow user cookies

--- a/app/views/home/base.html.erb
+++ b/app/views/home/base.html.erb
@@ -3,7 +3,7 @@
       <%= link_to "Muber", root_path %>
     </header>
     <div>
-      <p>「今」を重視する新感覚マッチングアプリ</p>
+      <p>リアルでカジュアルな新感覚マッチングアプリ</p>
       <p><%= link_to "ユーザー登録", signup_path %></p>
     </div>
 </body>
