--- a/app/views/home/base.html.erb
+++ b/app/views/home/base.html.erb
@@ -5,5 +5,8 @@
     <div>
       <p>リアルでカジュアルな新感覚マッチングアプリ</p>
       <p><%= link_to "ユーザー登録", signup_path %></p>
+
+      <%= link_to "オンラインにする", "#", id: "connect-link" %>
+      <%= link_to "オフラインにする", "#", id: "disconnect-link" %>
     </div>
 </body>
