Set location saving

--- a/app/views/home/base.html.erb
+++ b/app/views/home/base.html.erb
@@ -6,7 +6,7 @@
       <p>リアルでカジュアルな新感覚マッチングアプリ</p>
       <p><%= link_to "ユーザー登録", signup_path %></p>
 
-      <%= link_to "オンラインにする", "#", id: "connect-link" %>
+      <%= link_to "オンラインにする", entry_path %>
       <%= link_to "オフラインにする", "#", id: "disconnect-link" %>
     </div>
 </body>
