--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,3 +38,9 @@
     </div>
   </body>
 </html>
+
+<script>
+  <% if logged_in? %>
+    currentUserId = <%= current_user.id %>;
+  <% end %>
+</script>
