--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,18 +5,27 @@
 
     <%= render 'shared/error_messages' %>
 
-    <%= f.label :name %>
+    <%= f.label :name, "ニックネーム" %>
     <%= f.text_field :name %>
     
-    <%= f.label :email %>
+    <%= f.radio_button :girl, 0 %>
+    <%= f.label :girl, "男" %>
+    <%= f.radio_button :girl, 1 %>
+    <%= f.label :girl, "女" %>
+    
+
+    <%= f.label :date_of_birth, "生年月日" %>
+    <%= f.date_field :date_of_birth %>
+    
+    <%= f.label :email, "メールアドレス" %>
     <%= f.email_field :email %>
 
-    <%= f.label :password %>
+    <%= f.label :password, "パスワード" %>
     <%= f.password_field :password %>
 
-    <%= f.label :password_confirmation %>
+    <%= f.label :password_confirmation, "パスワード確認用" %>
     <%= f.password_field :password_confirmation %>
 
-    <%= f.submit "Create my account" %>
+    <%= f.submit "登録" %>
   <% end %>
 </div>
