Finish connection and location

--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -1,11 +1,10 @@
 <h1>エントリー</h1>
-<h3>位置情報を許可してください</h3>
 
-<button type="button" id="get-position-btn">許可する</button>
 <div id="location-result"></div>
+<button type="button" id="get-position-btn">許可する</button>
 
-<%= form_with model: current_user, url: "/entry/#{current_user.id}",
-              method: :post, id: "whole-form" do |f| %>
+
+<%= form_with model: current_user, id: "whole-form" do |f| %>
   <%= f.file_field :image, capture: 'camera' %>
 
   <%= f.label :comment, "つぶやき" %>
