Complete Chat fundamental

--- a/app/views/matches/map.html.erb
+++ b/app/views/matches/map.html.erb
@@ -14,4 +14,11 @@
     <img id="her-his-image"></img>
     <button id="agreement">今すぐ会う</button>
   </div>
+  <div id="chat" style="display: none;">
+    <div id="chat-display"></div>
+    <div id="messege" >
+      <input type="text", id="message" />
+      <button type="submit", id="submission">送信</button>
+    </div>
+  </div>
 </div>
