--- a/app/views/home/base.html.erb
+++ b/app/views/home/base.html.erb
@@ -1,12 +1,9 @@
-<body>
-    <header>
-      <%= link_to "Muber", root_path %>
-    </header>
-    <div>
-      <p>リアルでカジュアルな新感覚マッチングアプリ</p>
-      <p><%= link_to "ユーザー登録", signup_path %></p>
+<div>
+  <p>リアルタイム</p>
+  <p>新感覚マッチングアプリ</p>
+  <h1>Muber</h1>
+  <p><%= link_to "ユーザー登録", signup_path %></p>
 
-      <%= link_to "オンラインにする", entry_path %>
-      <%= link_to "オフラインにする", "#", id: "disconnect-link" %>
-    </div>
-</body>
+  <%= link_to "オンラインにする", entry_path %>
+  <%= link_to "オフラインにする", "#", id: "disconnect-link" %>
+</div>
