--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
 
 <html>
   <head>
-    <title>Muber</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title><%= full_title(yield(:title)) %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -17,31 +18,32 @@
     <%= javascript_importmap_tags %>
   </head>
 
-
-  <header>
-    <div>
-      <%= link_to "Muber", root_path %>
-      <ul>
-        <% if logged_in? %>
-          <li><%= link_to "プロフィール", current_user %></li>
-          <li>
-            <%= link_to "ログアウト", logout_path,
-                                     data: { "turbo-method": :delete } %>
-          </li>
-        <% else %>
-          <li><%= link_to "ログイン", login_path %></li>
-        <% end %>
-      </ul>
-    </div>
-  </header>
-
   <body>
-    <div>
+    <div class="container">
       <% flash.each do |message_type, message| %>
         <div><%= message %></div>
       <% end %>
       <%= yield %>
-      <%= debug(params) if Rails.env.development? %>
-    </div>
+    </div>  
+    <footer>
+      <div class="container">
+        <%= link_to "Muber", root_path %>
+        <ul>
+          <% if logged_in? %>
+            <li>
+              <%= link_to "プロフィール", current_user %>
+            </li>
+            <li>
+              <%= link_to "ログアウト", logout_path,
+                                        data: { "turbo-method": :delete } %>
+            </li>
+          <% else %>
+            <li><%= link_to "ログイン", login_path %></li>
+          <% end %>
+        </ul>
+      </div>
+    </footer>
   </body>
+
+
 </html>
