Separate homepage to partial

--- a/app/views/matches/_not_logged_in.html.erb
+++ b/app/views/matches/_not_logged_in.html.erb
@@ -2,8 +2,6 @@
   <p>リアルタイム</p>
   <p>新感覚マッチングアプリ</p>
   <h1>Muber</h1>
+  <p><%= link_to "ログイン" ,login_path %></p>
   <p><%= link_to "ユーザー登録", signup_path %></p>
-
-  <%= link_to "オンラインにする", entry_path %>
-  <%= link_to "オフラインにする", "#", id: "disconnect-link" %>
 </div>
