--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -26,5 +26,6 @@
     <%= f.password_field :password_confirmation %>
 
     <%= f.submit "登録" %>
+    <p>※ログイン情報はクッキーに保存されます</p>
   <% end %>
 </div>
