--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,20 @@
-<%= @user.name %>
+<%= form_with(model: @user) do |f| %>
+  <%= render 'shared/error_messages' %>
+
+  <%= f.label :name, "ニックネーム" %>
+  <%= f.text_field :name %>
+
+  <%= f.label :email, "メールアドレス" %>
+  <%= f.email_field :email %>
+
+  <%= f.label :password, "パスワード" %>
+  <%= f.password_field :password %>
+
+  <%= f.label :password_confirmation, "パスワード確認用" %>
+  <%= f.password_field :password_confirmation %>
+
+  <%= f.submit "更新" %>
+<% end %>
+
+<%= link_to "アカウントを削除する", @user, data: { "turbo-method": :delete,
+                                                   turbo_confirm: "本当に削除しますか？" } %>
