--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -11,7 +11,7 @@
     <%= f.password_field :password %>
 
     <%= f.label :password_confirmation %>
-    <%= f.password_field, :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
 
     <%= f.submit "パスワードを更新" %>
   <% end %>
