--- a/app/views/matches/_not_logged_in.html.erb
+++ b/app/views/matches/_not_logged_in.html.erb
@@ -1,7 +1,29 @@
 <div>
-  <p>リアルタイム</p>
-  <p>新感覚マッチングアプリ</p>
-  <h1>Muber</h1>
+  <h1>出会いを、もっとカジュアルに。</h1>
+
+  <div class="matchesNew__information">
+    <div>
+      <h2>Realtime</h2>
+      マッチが成立したら、今すぐに会いましょう。
+    </div>
+    <div>
+      <h2>Fast Meeting</h2>
+      最も距離の近い人同士がマッチされます。
+    </div>
+    <div>
+      <h2>No Profile</h2>
+      自己紹介はチャットではなく、直接向かい合って。
+    </div>
+    <div>
+      <h2>No Doubt</h2>
+      相手が知りたいのは偽りのないあなたです。
+    </div>
+    <div>
+      <h2>100% Free</h2>
+      女性も男性も、完全無料。
+    </div>
+  </div>
+
   <p><%= link_to "ログイン" ,login_path %></p>
   <p><%= link_to "ユーザー登録", signup_path %></p>
 </div>
