Recode around private connection

--- a/app/views/matches/map.html.erb
+++ b/app/views/matches/map.html.erb
@@ -9,17 +9,21 @@
     <h2>
       <span id="name"></span>
       <span id="age"></span>
-      <p id="distance"></p>
     </h2>
+      <p id="distance"></p>
+      <p id="comment"></p>
+   
     <img id="her-his-image"></img>
     <button id="agreement">今すぐ会う</button>
-  </div>
-  <div id="chat" style="display: none;">
-    <button id="unmatch">マッチ解除</button>
+  </div> 
+  <button id="unmatch" style="display: none;">マッチ解除</button>
+
+  <!--
     <div id="chat-display"></div>
     <form id="form">
       <input type="text", id="message" />
       <button type="submit", id="submission">送信</button>
     </form>
-  </div>
+    </div>
+  -->
 </div>
