--- a/app/views/matches/map.html.erb
+++ b/app/views/matches/map.html.erb
@@ -15,15 +15,12 @@
    
     <img id="her-his-image"></img>
     <button id="agreement">今すぐ会う</button>
-  </div> 
-  <button id="unmatch" style="display: none;">マッチ解除</button>
-
-  <!--
-    <div id="chat-display"></div>
-    <form id="form">
-      <input type="text", id="message" />
-      <button type="submit", id="submission">送信</button>
-    </form>
-    </div>
-  -->
+  </div>
+  <div id="appointment" style="display: none">
+    <h2 id="station"></h2>
+    <h2 id="distance-to-station"></h2>
+    <h2 id="meeting-time"></h2>
+    
+    <button id="unmatch">マッチ解除</button>
+  </div>
 </div>
