--- a/app/views/matches/map.html.erb
+++ b/app/views/matches/map.html.erb
@@ -20,7 +20,7 @@
     <h2 id="station"></h2>
     <h2 id="distance-to-station"></h2>
     <h2 id="meeting-time"></h2>
-    
+    <p id="partner-info"></p>
     <button id="unmatch">マッチ解除</button>
   </div>
 </div>
