Decide universal button and input

--- a/app/views/matches/_not_logged_in.html.erb
+++ b/app/views/matches/_not_logged_in.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h1>出会いを、もっとカジュアルに。</h1>
+  <h2>出会いを、もっと自然に、もっとカジュアルに。</h2>
 
   <div class="matchesNew__information">
     <div>
@@ -8,15 +8,11 @@
     </div>
     <div>
       <h2>Fast Meeting</h2>
-      最も距離の近い人同士がマッチされます。
+      距離の近い人からマッチされます。
     </div>
     <div>
-      <h2>No Profile</h2>
-      自己紹介はチャットではなく、直接向かい合って。
-    </div>
-    <div>
-      <h2>No Doubt</h2>
-      相手が知りたいのは偽りのないあなたです。
+      <h2>No Profile, No Chat</h2>
+      自己紹介は直接向かい合って。
     </div>
     <div>
       <h2>100% Free</h2>
@@ -24,6 +20,7 @@
     </div>
   </div>
 
-  <p><%= link_to "ログイン" ,login_path %></p>
-  <p><%= link_to "ユーザー登録", signup_path %></p>
+  <p><%= link_to "アカウントをつくる", signup_path, class: "btn btn-signup" %></p>
+  <p><%= link_to "ログインはこちら" ,login_path, class: "login_link" %></p>
+ 
 </div>
