--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,5 @@
-<div class="logo">
-  <h3>Muber</h3>
-</div>
+<%= link_to "Muber", root_url, id: "logo" %>
+
 <% if logged_in? %>
   <button>マッチと出会う</button>
 
