--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,18 +1,15 @@
 :root {
-  ---primary-color: hsl(286, 100%, 75%);
-  --secondary-color: #4f005a;
-  --accent-color: hsl(271, 91%, 83%);
-  --background-color: #333333;
-  --text-color: #ffffff;
-  --subtext-color: #777777;
+  --beige-color: #DCCBB4;
+  --first-color: #495aff;
+  --second-color: #0acffe;
 }
 
 /* universal */
 
 body {
   background-color: black;
-  color: var(--text-color);
-  min-height: 100vh;
+  color: white;
+  height: 100svh;
   font-size: 16px;
   text-align: center;
   margin: 0;
@@ -21,25 +18,55 @@ body {
 footer {
   position: absolute;
   bottom: 0;
-  width: 100%;
   text-align: left;
 }
 
-.logo {
-  padding-left: 16px;
+#logo {
+  display: block;
+  text-decoration: none;
+  color: var(--beige-color);
+  font-size: 24px;
+  margin: 16px;
 }
 
 .body__container {
-  background-color: var(--background-color);
+  background-color: rgb(50, 50, 50);
   width: 100%;
   max-width: 512px;
-  min-height: 100vh;
+  height: 100svh;
   margin: 0 auto;
 }
 
 .main__container {
   padding: 16px 32px;
 }
+
+.btn {
+  color: white;  
+  background-image: linear-gradient(to right, var(--second-color) 0%, var(--first-color) 100%);
+  font-size: 24px;
+  font-weight: bold;
+  display: block;
+  border-radius: 100vh;
+  text-decoration: none;
+  padding: 10px;
+}
+
+
+input {
+  font-size: 24px;
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  background-color: beige;
+}
+
+label {
+  font-size: 24px;
+}
+
+/* page when logged in */
 
 #map {
   height: 100%;
@@ -56,12 +83,58 @@ footer {
   width: 70px;
 }
 
-/* not logged in */
+/* page when logged in  */
 
 .matchesNew__information {
   text-align: left;
+  padding-bottom: 24px;
 }
 
 .matchesNew__information h2 {
-  margin: 32px 0px 8px 0px;
+  margin: 16px 0px 8px 0px;
+}
+
+.login_link {
+  color: var(--text-color);
+  font-size: 14px;
+}
+
+/* signup page */
+.usersNew__field {
+  margin-bottom: 8px;
+}
+
+.gender input[type=radio] {
+  display: none;
+}
+
+.gender label {
+  display: inline-block;
+  padding: 8px 48px;
+  margin: 0 8px;
+  border: 1px solid pink;
+  border-radius: 12px;
+  background-color: white;
+  color: black;
+  opacity: 1.0;
+}
+
+.gender label[for=user_girl_1] {
+  border: 2px solid rgb(255, 1, 183);
+}
+
+.gender label[for=user_girl_0] {
+  border: 2px solid rgb(1, 111, 255);
+}
+
+.gender input[type=radio]:checked + label[for=user_girl_1] {
+  background-color: rgb(255, 176, 206);  
+}
+
+.gender input[type=radio]:checked + label[for=user_girl_0] {
+  background-color: rgb(176, 194, 255);  
+}
+
+.submitToSignup {
+  margin-top: 16px;
 }
