--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,10 +1,14 @@
 <% provide(:title, "パスワードを忘れた") %>
-<h2>パスワードを忘れた</h2>
+<h3>パスワード再設定用のリンクを送信</h3>
+
 <div>
   <%= form_with(url: password_resets_path, scope: :password_reset) do |f| %>
+  <div class="general_field">
     <%= f.label :email, "登録しているメールアドレス" %>
     <%= f.email_field :email %>
-
-    <%= f.submit "Submit" %>
+  </div>
+  <div class="general_field">
+    <%= f.submit "リンクを送る", class: "btn" %>
+  </div>
   <% end %>
 </div>
