--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,8 @@
 <%= link_to "Muber", root_url, id: "logo" %>
 
 <% if logged_in? %>
-  <button>マッチと出会う</button>
-
-  <ul class="hamburger">
+<nav class="nav">
+  <ul class="nav-menu">
       <li>
         <%= link_to "プロフィール", current_user %>
       </li>
@@ -12,4 +11,5 @@
                                   data: { "turbo-method": :delete } %>
       </li>
   </ul>
- <% end %>
+</nav>
+<% end %>
