--- a/app/views/matches/_logged_in.html.erb
+++ b/app/views/matches/_logged_in.html.erb
@@ -2,6 +2,9 @@
 <div class="general_field">
   <%= f.file_field :image, capture: 'camera' %>
 </div>
+<div>
+  <img id="image-preview">
+</div>
 <div class="general_field">
   <%= f.label :comment, "つぶやき(省略可)" %>
   <%= f.text_area :comment %>
