--- a/app/views/matches/_logged_in.html.erb
+++ b/app/views/matches/_logged_in.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: current_user, id: "whole-form" do |f| %>
 <div class="general_field">
-  <%= f.file_field :image, capture: 'camera' %>
+  <%= f.file_field :image, capture: 'user' %>
 </div>
 <div>
   <img id="image-preview">
