--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -176,6 +176,72 @@ label[for=user_comment] {
   max-width: 100%;
 }
 
+#image-preview:not([src]) {
+  background-color: gray;
+  width: 100%;
+  aspect-ratio: 4 / 5;
+}
+
+#whole-form .general_field {
+  margin: 0;
+}
+
+#user_image {
+  display: none;
+}
+
+#camera {
+  background-image: linear-gradient(to right, var(--second-color) 0%, var(--first-color) 100%);
+  padding: 5px;
+  border-radius: 100vh;
+  font-weight: bold;
+}
+
+.dli-camera {
+  display: inline-block;
+  vertical-align: middle;
+  color: #333;
+  line-height: 1;
+  position: relative;
+  width: 1.25em;
+  height: 0.85em;
+  background: #fff;
+  border: 0.1em solid currentColor;
+  border-radius: 0.1em;
+  box-sizing: content-box;
+}
+
+.dli-camera::before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 100%;
+  width: 40%;
+  height: 0.1375em;
+  background: inherit;
+  border: 0.1em solid currentColor;
+  border-bottom: 0;
+  border-radius: 0.225em 0.225em 0 0;
+  box-sizing: content-box;
+  transform: translateX(-50%);
+}
+
+.dli-camera::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 0.646em;
+  height: 0.646em;
+  border: 0.125em solid currentColor;
+  border-radius: 50%;
+  box-sizing: border-box;
+  box-shadow: 0.39em -0.27em 0 -0.27em currentColor;
+}
+
 /* login */
 .general_field {
   margin-top: 64px;
