--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,11 +1,10 @@
 <% provide(:title, "パスワードを忘れた") %>
+<div class="main__container">
 <h3>パスワード再設定用のリンクを送信</h3>
-
-<div>
   <%= form_with(url: password_resets_path, scope: :password_reset) do |f| %>
   <div class="general_field">
     <%= f.label :email, "登録しているメールアドレス" %>
-    <%= f.email_field :email %>
+    <%= f.email_field :email, placeholder: "例: porco92@example.com" %>
   </div>
   <div class="general_field">
     <%= f.submit "リンクを送る", class: "btn" %>
