--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
+<div class="main__container">
 <%= form_with(model: @user) do |f| %>
-  <%= render 'shared/error_messages' %>
+<%= render 'shared/error_messages' %>
 <div class="general_field">
   <%= f.label :name, "ニックネーム" %>
   <%= f.text_field :name %>
@@ -17,3 +18,4 @@
 
 <%= link_to "アカウントを削除する", @user, data: { "turbo-method": :delete,
                                                    turbo_confirm: "本当に削除しますか？" } %>
+</div>
